# Senior-Design

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  dockerfile  entry.bash  entry.sh  main.py  model_utils.py  pyproject-training.toml  pyproject.toml  requirements.txt  run.bat
RF-DETR-model_modified/: .gitignore  app.py  export_to_onnx.py  main.py  readme.md  requirements.txt
RF-DETR-model_modified/merged_annotations/test/: _annotations.coco.json
RF-DETR-model_modified/merged_annotations/train/: _annotations.coco.json
RF-DETR-model_modified/merged_annotations/valid/: _annotations.coco.json
RF-DETR-model_modified/rf-detr-modifications/: .gitignore  pyproject.toml
RF-DETR-model_modified/rf-detr-modifications/rfdetr/: detr.py  engine.py  main.py
RF-DETR-model_modified/rf-detr-modifications/rfdetr/datasets/: coco.py
RF-DETR-model_modified/rf-detr-modifications/rfdetr/deploy/: export.py
RF-DETR-model_modified/rf-detr-modifications/rfdetr/models/: lwdetr.py  transformer.py
RF-DETR-model_modified/utils/: check_miss_path.py  merge_coco.py  remap_label.py  tiles_images.py
backend/: .env.test  db_check.py  readme.md  sample.env  test_readme.md
backend/api/: models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/config/: settings.py
backend/core/: authentication.py  middleware.py  model_utils.py  models.py  readme.md  serializers.py  services.py  urls.py  utils.py  views.py
backend/core/migrations/: 0001_initial.py  0002_customer_address.py  0003_remove_customer_address.py  0004_houseimage_predicted_at_houseimage_predicted_url.py
backend/templates/backend/: base.html  run_prediction.html  sign_in.html
backend/templates/backend/components/: header.html
backend/templates/backend/modals/: google_login_modal.html
backend/tests/: conftest.py  test_authentication.py  test_middleware.py  test_model_utils.py  test_services.py  test_utils.py  test_views.py
cloud/: .gitignore  README.md  README_BACKEND.md  upload_test.py
inspections/: admin.py  models.py  serializers.py  urls.py  views.py
inspections/migrations/: 0002_remove_imageasset_path_imageasset_file_and_more.py
nginx/: Dockerfile  default.conf
project_venv/: pyvenv.cfg
server/: settings.py  urls.py
uploads/: urls.py  views.py
website/: app.js  package.json
website/public/: index.html
website_nodeJS/: app.js  package-lock.json
website_nodeJS/public/: index.html
website_react/roof-vision/: package-lock.json  package.json
website_react/roof-vision/src/: App.js  index.css
website_react/roof-vision/src/components/: CustomerTable.jsx  Header.jsx
website_streamlit/: .gitignore  app.py  utils.py
website_streamlit/.streamlit/: config.toml
website_streamlit/css/: style_dashboard.css
website_streamlit/database/: clients.csv
website_streamlit/pages/: Dashboard.py  Generate_Report.py  customers.py  login.py  signup.py  test.py
